# ydotool-

./: .clang-format  .gitignore  CMakeLists.txt  README.md
Client/: globalConsts.hpp  tool_click.cpp  tool_key.cpp  tool_mousemove.cpp  tool_stdin.cpp  tool_type.cpp  ydotool.cpp
Daemon/: globalConsts.hpp  ydotoold.cpp
